objects/WarrantyTimeLimit__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Time limit for warranty replacement process based on channel, location and other parameters</description>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <label>LocationCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeLimit__c</fullName>
        <label>TimeLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WarrantyTimeLimit</label>
</CustomObject>